# SyntaxTreeGen

./: .gitignore  CMakeLists.txt  README.md  SyntaxTreeGen  bundle.sh  imgui.ini  make.sh
.cache/clangd/index/: ConnectorNode.cpp.57AE57171CBCFB44.idx  ConnectorNode.h.ACD4DE9A1CAB44AD.idx  FA6FreeSolidFontData.h.9A04E276625500C5.idx  Grid.cpp.36334FE52A1FB00B.idx  Grid.h.2735F570932A16A3.idx  IconsFontAwesome6.h.2974AFBCD46D0E12.idx  Node.cpp.D6810836E21A3F03.idx  Node.h.0BD5CF4304C6933D.idx  PhraseNode.cpp.3892BEEA46143B21.idx  PhraseNode.h.037AC0D144A60FDE.idx  SentenceTree.cpp.2DF3352851CCAA69.idx  SentenceTree.h.21F3DB59DF9E0CE7.idx  SyntaxTree.cpp.8F2A86A7B6678C80.idx  SyntaxTree.h.997F808DAF6FA033.idx  TreeStructure.h.34BFFE7E62828B22.idx  Typing.cpp.DA32A8B2A1950263.idx  Typing.h.AC4E518FCF2974E2.idx  WordClassNode.cpp.7197667157CCA810.idx  WordClassNode.h.DAD98BA5100D3D06.idx  WordNode.cpp.A151CD85CE11B9F5.idx  WordNode.h.C0FF2587A276E4EE.idx  imconfig.h.DCD6B70C4D032B38.idx  imgui.cpp.05B8CCD1FEB5E0FF.idx  imgui.h.AF9AC348EEF976FC.idx  imgui_demo.cpp.094689C1A59BC0ED.idx  imgui_draw.cpp.6328D898D62AA267.idx  imgui_impl_raylib.h.854C0810EF0B0C57.idx  imgui_internal.h.92690F317FD102DD.idx  imgui_tables.cpp.83B38D65DCD16FB9.idx  imgui_widgets.cpp.19D047CEAD3AB824.idx  imstb_rectpack.h.BCB4035573CDE020.idx  imstb_textedit.h.698D23691F5FD451.idx  imstb_truetype.h.9C6AF53274505419.idx  main.cpp.A1C6B50306088FBF.idx  raylib.h.87909F548DA66060.idx  raymath.h.2B8DF5CF76D1A706.idx  rlImGui.cpp.AEFE655E45723717.idx  rlImGui.h.E6F531B4EF4D9C2E.idx  rlgl.h.FB87ABE56B7F74F1.idx
include/: App.hpp  Grid.h  LinkedList.hpp  POS_tagger.h  SentenceTree.h  SyntaxTree.h  Tree.hpp  Typing.h  gui.hpp  shared_data.hpp
include/TreeStructure/: ConnectorNode.h  Node.h  PhraseNode.h  TreeStructure.h  WordClassNode.h  WordNode.h
python/: spacy_wrapper.py  spacy_wrapper.spec
scripts/: bundle.sh  make.bat  make.sh
src/: App.cpp  Grid.cpp  Node.cpp  SentenceTree.cpp  SyntaxTree.cpp  Tree.cpp  Typing.cpp  main.cpp  main_old.cpp
src/TreeStructure/: ConnectorNode.cpp  Node.cpp  PhraseNode.cpp  WordClassNode.cpp  WordNode.cpp
